# margot_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  beautify.sh  requirements.txt
agora/: CMakeLists.txt
agora/config/: agora_commonConfig.cmake.in
agora/doc/: CMakeLists.txt  doxygen.conf.in  mainpage.dox
agora/examples/: margot_agora.json
agora/include/agora/: agora_properties.hpp  application_handler.hpp  application_manager.hpp  fs_cluster.hpp  fs_configuration.hpp  fs_description.hpp  fs_doe.hpp  fs_handler.hpp  fs_model.hpp  fs_observation.hpp  fs_prediction.hpp  launcher.hpp  launcher_configuration.hpp  logger.hpp  logger_configuration.hpp  logger_console.hpp  logger_file.hpp  model_cluster.hpp  model_doe.hpp  model_message.hpp  model_prediction.hpp  paho_remote_handler.hpp  plugin_configuration.hpp  remote_configuration.hpp  remote_handler.hpp  safe_queue.hpp  threadpool.hpp  virtual_channel.hpp  virtual_io.hpp  worker.hpp
agora/plugins/: requirements.txt
agora/plugins/average/: README.md  generate_model.sh  model.py
agora/plugins/cluster/: cluster.py  (+3 more)
agora/server/: CMakeLists.txt
agora/src/: application_handler.cpp  csv_fs_cluster.cpp  csv_fs_description.cpp  csv_fs_doe.cpp  csv_fs_observation.cpp  csv_fs_prediction.cpp  fs_cluster.cpp  fs_description.cpp  fs_doe.cpp  fs_handler.cpp  fs_model.cpp  fs_observation.cpp  fs_prediction.cpp  launcher.cpp  logger.cpp  main.cc  paho_remote_handler.cpp  remote_handler.cpp  virtual_io.cpp  worker.cpp
agora/test/: .gitignore  CMakeLists.txt  test_launcher.cpp
agora_server/: CMakeLists.txt
agora_server/src/: client.cpp  main.cpp
beholder/: CMakeLists.txt
beholder/gnuplot_script/: gnuplot_mean.p  gnuplot_variance.p
beholder/python hypothesis test/: python_welch_test.py
beholder/src/: main.cc
extra/benchmark/: CMakeLists.txt  bench_base.hpp  benchmark_asrtm.hpp  benchmark_knowledge_base.hpp  benchmark_state.hpp  evaluator.hpp  file_logger.hpp  main.cc  result_printer.hpp  test_add_constraint.hpp  test_add_ops.hpp  test_select_data_feature.hpp  test_set_rank.hpp  test_update.hpp  test_update_scaling.hpp
framework/: CMakeLists.txt
framework/asrtm/: CMakeLists.txt
framework/cmake/: FindCASSANDRA.cmake  FindCOLLECTOR.cmake  FindLIBUV.cmake  FindMQTT.cmake  FindOpenSSL.cmake  FindPAPI.cmake  FindSENSORS.cmake
framework/config/: CMakeLists.txt  Doxyfile.in  FindMARGOT.cmake.in  clang_autocomplete.in  gcc-flags.json.in  mainpage.dox  margot.pc.in  margot_config.hpp.in
framework/doc/: CMakeLists.txt  doxygen.conf.in  mainpage.dox
framework/monitor/: CMakeLists.txt
framework/src/: application_handler.cc  application_handler_beholder.cc  cassandra_fs_implementation.cc  collector_monitor.cc  csv_fs_implementation.cc  energy_monitor.cc  frequency_monitor.cc  global_view.cc  global_view_beholder.cc  hypothesis_test.cc  ici_cdt.cc  launcher.cc  logger.cc  memory_monitor.cc  model_generator.cc  odroid_energy_monitor.cc  odroid_power_monitor.cc  paho_remote_implementation.cc  papi_monitor.cc  parameters_beholder.cc  process_cpu_usage_monitor.cc  system_cpu_usage_monitor.cc  temperature_monitor.cc  throughput_monitor.cc  time_monitor.cc  virtual_io.cc  worker.cc  worker_beholder.cc
framework/test/: CMakeLists.txt
heel/: .gitignore  CMakeLists.txt  prova.json
heel/config/: heelConfig.cmake.in  heel_generatorConfig.cmake.in  margot_heel_interface.cmake.in
heel/examples/: adaptive-agora-string.json  adaptive-agora.json  adaptive.json  profiling.json
heel/src/: composer_agora.cpp  composer_application.cpp  composer_block.cpp  composer_feature_fields.cpp  composer_knob.cpp  composer_metric.cpp  composer_monitor.cpp  composer_parameter.cpp  composer_state.cpp  configuration_file.cpp  cpp_state_emitter.cpp  generator_cmake.cpp  generator_cpp_application_geometry_hdr.cpp  generator_cpp_application_geometry_src.cpp  generator_cpp_knowledge_hdr.cpp  generator_cpp_knowledge_src.cpp  generator_cpp_managers_hdr.cpp  generator_cpp_managers_src.cpp  generator_cpp_margot_hdr.cpp  generator_cpp_margot_src.cpp  generator_description_verbose.cpp  generator_utils.cpp  main.cpp  model_agora.cpp  model_features.cpp  model_knob.cpp  model_metric.cpp  model_monitor.cpp  model_state.cpp  model_validate.cpp  parser_agora.cpp  parser_application.cpp  parser_block.cpp  parser_features.cpp  parser_knob.cpp  parser_metric.cpp  parser_monitor.cpp  parser_operating_point.cpp  parser_parameter.cpp  parser_state.cpp  (+3 more)
margot/: CMakeLists.txt
margot/benchmark/: CMakeLists.txt  result_printer.hpp  test_add_ops.hpp  test_select_data_feature.hpp  test_update.hpp
margot/cmake/: FindCOLLECTOR.cmake  FindCXXTEST.cmake  FindPAPI.cmake  FindPFM.cmake  FindPahoMQTT.cmake  FindSENSORS.cmake
margot/config/: CMakeLists.txt  margot.pc.in  margotConfig.cmake.in
margot/doc/: CMakeLists.txt  mainpage.dox
margot/src/: application_handler.cpp  collector_monitor.cc  csv_fs_cluster.cpp  csv_fs_description.cpp  csv_fs_doe.cpp  csv_fs_observation.cpp  csv_fs_prediction.cpp  energy_monitor.cc  frequency_monitor.cc  fs_description.cpp  fs_doe.cpp  fs_handler.cpp  fs_model.cpp  launcher.cpp  memory_monitor.cc  odroid_energy_monitor.cc  paho_remote_handler.cpp  remote_handler.cpp  system_cpu_usage_monitor.cc  temperature_monitor.cc  throughput_monitor.cc  virtual_channel_impl_paho.cc  worker.cpp
margot/test/: CMakeLists.txt
margot_heel/margot_heel_if/: CMakeLists.txt  FindHEEL.cmake.in  FindMARGOT_HEEL.cmake.in  heel.pc.in  margot_heel.pc.in
server/: CMakeLists.txt
server/cmake/: FindMQTT.cmake
server/include/: application_handler.hpp  application_stub.hpp  cassandra_fs_implementation.hpp  common_objects.hpp  doe.hpp  fs_handler.hpp  global_view.hpp  logger.hpp  model_generator.hpp  paho_remote_implementation.hpp  remote_handler.hpp  safe_queue.hpp  threadpool.hpp  virtual_channel.hpp  virtual_fs.hpp  virtual_io.hpp  worker.hpp
server/src/: application_handler.cc  appstub.cc  cassandra_fs_implementation.cc  global_view.cc  logger.cc  main.cc  model_generator.cc  paho_remote_implementation.cc  pseudoapp.cc  virtual_io.cc  worker.cc
(+470 files in other folders)
